# volentix_contracts

./: .gitignore  .token.swp  CHANGELOG.md  CODE_OF_CONDUCT.md  Diagram1.dia.autosave  README.md  ROADMAP.md  SECURITY.md  accounts  password  password2  sequence.py  token
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
crowdfledger/: README.md  build.sh
scripts/: create.sh  issue.sh  txfds.sh
testnet/: accounts  bunch of accounts  password3
vdex-distribution/: build.sh
vdexdposvote/: README.md  vdexdposvote.abi  vdexdposvote.cpp  vdexdposvote.hpp  vdexdposvote.wasm
vdexdposvotesep12/: vdexdposvote.cpp  vdexdposvote.hpp
vdexgateway/: README.md  vdexgateway.abi  vdexgateway.cpp  vdexgateway.hpp  vdexgateway.wasm
volentix1111/: volentix1111.abi  volentix1111.cpp
volentixfrst/: README.md  volentixfrst.abi  volentixfrst.cpp  volentixfrst.wast  volentixfrst_rc.md  volentixfrst_rcrdtfr_rc.md
volentixfutr/: README.md  eosio.token.hpp  run_unittests.sh  test.py  test2.py  volentixfutr.abi  volentixfutr.cpp  volentixfutr.txfds_rc.md  volentixfutr.wasm  volentixfutr_rc.md
volentixgsys/: CMakeLists.txt  volentixgsys.abi  volentixgsys.cpp
volentixgsys.sep12/: CMakeCache.txt
volentixlist/: build.sh
volentixpool/: README.md  (+4 more)
volentixstak/volentixstak/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  volentixstak.abi  volentixstak.cpp  volentixstak.hpp  volentixstak.wasm
volentixstak/volentixstak/script/: accounts.sh  clean.sh  deploy.sh  key.txt  test.sh
volentixstak/volentixstak/src/: CMakeLists.txt
(+136 files in other folders)
